[gd_scene load_steps=14 format=3 uid="uid://bi5ucj5u1w7cd"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_tkgp2"]
[ext_resource type="Shader" path="res://pointcloud.gdshader" id="2_7c0js"]
[ext_resource type="Texture2D" uid="uid://dfhh621idydp2" path="res://point_sprite.png" id="3_hhgtv"]
[ext_resource type="PackedScene" uid="uid://vvf0i2c1wen4" path="res://Scenes/raycast_scene.tscn" id="4_1aj77"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fhwqm"]
render_priority = 0
shader = ExtResource("2_7c0js")
shader_parameter/point_size = 32.0
shader_parameter/sprite = ExtResource("3_hhgtv")

[sub_resource type="ArrayMesh" id="ArrayMesh_brgdu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwd1b"]
bg_color = Color(0.0196078, 0, 0.0196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="Environment" id="Environment_hpq2n"]

[sub_resource type="World3D" id="World3D_vj5rv"]
environment = SubResource("Environment_hpq2n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5w0f"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0.686275, 1)

[sub_resource type="Animation" id="Animation_s8nwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Screen/Control/Panel/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ydbcc"]
resource_name = "Scan"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Screen/Control/Panel/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(397, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_010iy"]
_data = {
"RESET": SubResource("Animation_s8nwr"),
"Scan": SubResource("Animation_ydbcc")
}

[node name="Node3D" type="Node3D"]
script = ExtResource("1_tkgp2")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
fov = 50.0

[node name="AzimuthTurntable" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="ElevationTurntable" type="Node3D" parent="AzimuthTurntable"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="AzimuthTurntable/ElevationTurntable"]
unique_name_in_owner = true
material_override = SubResource("ShaderMaterial_fhwqm")
mesh = SubResource("ArrayMesh_brgdu")
skeleton = NodePath("../../..")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Screen" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Screen"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Control" type="PanelContainer" parent="MarginContainer/Screen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_bottom = 400.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pwd1b")

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/Screen/Control"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="MarginContainer/Screen/Control/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_vj5rv")
handle_input_locally = false
msaa_3d = 2
size = Vector2i(400, 400)
render_target_update_mode = 4

[node name="RaycastScene" parent="MarginContainer/Screen/Control/SubViewportContainer/SubViewport" instance=ExtResource("4_1aj77")]
unique_name_in_owner = true

[node name="Panel" type="Panel" parent="MarginContainer/Screen/Control"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e5w0f")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Screen/Control/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 3.0
offset_bottom = 400.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Screen/Control/Panel/ColorRect"]
layout_mode = 0
offset_top = -7.0
offset_right = 3.0
offset_bottom = -2.0

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/Screen/Control/Panel/ColorRect"]
layout_mode = 0
offset_top = 403.0
offset_right = 3.0
offset_bottom = 408.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_010iy")
}
autoplay = "Scan"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
